2006-02-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Applied fixes for dealing with reactors better.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	Applied Florian's patch to use %r instead of %s.
	Fixes crashes during printing of unprintable chars.

	* src/session.py:
	Fixed handling of avatar hashes received.

	* tools/Makefile:
	Added developer Makefile.

	* src/config.py:
	* src/debug.py:
	* src/main.py:
	Switched to new debugging code.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	* src/xdb/__init__.py:
	* src/xdb/legacyaimtransport.py:
	* src/xdb/legacyjittransport.py:
	* src/xdb/xmlfiles.py:
	* src/web/handler.py:
	* src/legacy/__init__.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/legacy/legacyiq.py:
	* src/legacy/legacylist.py:
	Switched to new debugging style.

	* src/globals.py:
	Added extra settings.

	* src/lang.py:
	* src/sasl.py:
	Minor cleanup.

	* src/web/handler.py:
	Imported http from newer proper location.

2006-02-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xdb/xmlfiles.py:
	Fixed reading of differently named variable.

	* src/imgmanip.py:
	Pulled image pieces out into this.

	* src/legacy/glue.py:
	* src/legacy/legacylist.py:
	* src/utils.py:
	Adjusted to account for move of image pieces.

	* src/legacy/glue.py:
	Updated version to 0.7.

2006-02-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* config_example.xml:
	* src/legacy/icqt.py:
	Added ability to disable email notifications.

2006-02-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xdb/xmlfiles.py:
	Fixed stupid bug where I wasn't assigning pre to anything.

	* src/legacy/legacylist.py:
	Made it so I can see the numeric hash.
